--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -1,3 +1,9 @@
 aws_access_key = "CHAVE_ACESSO_AWS"
 
 aws_secret_key = "CHAVE_SECRETA_AWS"
+
+key_name = "NOME_CHAVE"
+
+private_key_path = "CAMINHO_CHAVE_PRIVADA"
+
+public_key_path = "CAMINHO_CHAVE_PUBLICA"
